bug-56: do the followings: 1. add download activity 2. add listadapter for language 3. change wordsstorage to support one db for a lang and category combination. 4. add dialogutils 5. add errorutils 6. option dialog for partial downloaded db

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -45,6 +45,11 @@
             android:label="@string/title_activity_card"
             android:screenOrientation="portrait" >
         </activity>
+        <activity
+            android:name="org.vosie.wikicards.DownloadDBActivity"
+            android:label="@string/title_activity_downloaddb"
+            android:screenOrientation="portrait" >
+        </activity>
     </application>
 
 </manifest>
