Bug-80: enable actionbar's back button

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -34,26 +34,41 @@
             android:name=".SettingsActivity"
             android:label="@string/title_settings_activity"
             android:screenOrientation="portrait" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
         </activity>
         <activity
             android:name=".LicenseActivity"
             android:label="@string/label_licenses"
             android:screenOrientation="portrait" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".SettingsActivity" />
         </activity>
         <activity
             android:name=".CardActivity"
             android:label="@string/title_activity_card"
             android:screenOrientation="portrait" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
         </activity>
         <activity
             android:name=".StarredCardActivity"
             android:label="@string/title_activity_card"
             android:screenOrientation="portrait" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
         </activity>
         <activity
             android:name="org.vosie.wikicards.DownloadDBActivity"
             android:label="@string/title_activity_downloaddb"
             android:screenOrientation="portrait" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".MainActivity" />
         </activity>
     </application>
 
